--- a/le_comptoir_front/src/index.css
+++ b/le_comptoir_front/src/index.css
@@ -33,7 +33,8 @@ h1 {
   line-height: 1.1;
 }
 
-button {
+Button {
+  color: #ffffff;
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -45,7 +46,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #866749;
 }
 button:focus,
 button:focus-visible {
@@ -58,7 +59,7 @@ button:focus-visible {
     background-color: #ffffff;
   }
   a:hover {
-    color: #747bff;
+    color: #866749;
   }
   button {
     background-color: #f9f9f9;
