--- a/le_comptoir_front/src/component/prooductPage/product.css
+++ b/le_comptoir_front/src/component/prooductPage/product.css
@@ -1,7 +1,11 @@
 .responsive-image {
     max-width: 100vw; 
   }
-  
+
+.price{
+  font-weight: bold;
+}
+
   @media (min-width: 768px) { 
     .responsive-image {
       max-width: 70vw;
@@ -12,4 +16,35 @@
     .responsive-image {
       max-width: 50vw;
     }
+  }
+
+  @media (max-width: 400px) {
+    .card{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+
+  @media (min-width: 401px) {
+    .card{
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items:center;
+    }
+    
+    .stack{
+      display: flex;
+      justify-content: space-around;
+    }
+
+    /* .btnBuy{
+      margin-top: 6rem;
+    }
+
+    .card-name{
+      margin-bottom: 5rem;
+    } */
   }
